client: Delete File and Folder functionality added, client: Overflow of text at upload modal fixed

--- a/client/src/components/dashboard-components/css/SingleFile.css
+++ b/client/src/components/dashboard-components/css/SingleFile.css
@@ -60,3 +60,42 @@
 	min-height: 3rem;
 	min-width: 3rem;
 }
+
+.delete-btn {
+	background: transparent;
+	color: transparent;
+}
+
+.file:hover .delete-btn {
+	position: absolute;
+	top: 97%;
+	transform: translateY(-100%);
+	margin-left: 15px;
+	font-size: 1.5rem;
+	font-weight: bold;
+	color: var(--primary-color);
+	background-color: white;
+	width: 2rem;
+	height: 2rem;
+	border-radius: 50%;
+	display: grid;
+	place-content: center;
+}
+
+@media only screen and (max-width: 720px) {
+	.delete-btn {
+		position: absolute;
+		top: 97%;
+		transform: translateY(-100%);
+		margin-left: 15px;
+		font-size: 1.5rem;
+		font-weight: bold;
+		color: var(--primary-color);
+		background-color: white;
+		width: 2rem;
+		height: 2rem;
+		border-radius: 50%;
+		display: grid;
+		place-content: center;
+	}
+}
